--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "heroku",
+  "name": "day1",
   "version": "1.0.0",
-  "description": "Queue Emulator - Heroku",
-  "main": "app.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aakash-thotakura-au17/QueueEmulator.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/aakash-thotakura-au17/QueueEmulator/issues"
-  },
-  "homepage": "https://github.com/aakash-thotakura-au17/QueueEmulator#readme",
   "dependencies": {
     "express": "^4.17.1"
   }
